tests/programs/errors/variadic_with_default.flow
fn bad(..vals:int = 5):int {
    return 0
}

fn main():int {
    return 0
}
